--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    <ScrollView
         android:id="@+id/ScrollViewMain"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,32 +17,40 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView4"
+            <Button
+                android:id="@+id/button4"
                 android:layout_width="match_parent"
-                android:layout_height="89dp"
-                android:text="@string/headline2"
-                android:textSize="20sp" />
+                android:layout_height="80dp"
+                android:layout_marginTop="30dp"
+                android:text="@string/ventBtn" />
 
-            <TextView
-                android:id="@+id/textView3"
+            <Button
+                android:id="@+id/button5"
                 android:layout_width="match_parent"
-                android:layout_height="73dp"
-                android:text="@string/headline1"
-                android:textSize="20sp" />
+                android:layout_height="80dp"
+                android:layout_marginTop="30dp"
+                android:text="@string/shortTermPowerFailureBtn" />
 
-            <Spinner
-                android:id="@+id/spinnerPlaceInstall"
+            <Button
+                android:id="@+id/button6"
                 android:layout_width="match_parent"
-                android:layout_height="64dp"
-                android:entries="@array/placeInstall" />
+                android:layout_height="80dp"
+                android:layout_marginTop="30dp"
+                android:text="@string/wiringFluorescentLampsBtn" />
 
-            <Spinner
-                android:id="@+id/spinnerSys"
+            <Button
+                android:id="@+id/button7"
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:entries="@array/systemName" />
+                android:layout_height="80dp"
+                android:layout_marginTop="30dp"
+                android:text="@string/electricToolBtn" />
 
+            <Button
+                android:id="@+id/button8"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginTop="30dp"
+                android:text="@string/switchboardBtn" />
         </LinearLayout>
     </ScrollView>
 
